src/snapshots/purs_oxide__parser__tests__parse_atomic_type-2.snap
---
source: src/parser.rs
expression: "parse_type(\"\\\"string\\\"\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 8,
    },
    TypeLevelString(
        "string",
    ),
)
