src/snapshots/purs_oxide__parser__tests__parse_atomic_type-3.snap
---
source: src/parser.rs
expression: "parse_type(\"42\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 2,
    },
    TypeLevelInt(
        42,
    ),
)
