src/snapshots/purs_oxide__parser__tests__parse_atomic_type-4.snap
---
source: src/parser.rs
expression: "parse_type(\"Int\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 3,
    },
    TypeConstructor(
        QualifiedName(
            Symbol(
                "Int",
            ),
        ),
    ),
)
