src/snapshots/purs_oxide__parser__tests__parse_atomic_type-5.snap
---
source: src/parser.rs
expression: "parse_type(\"Prelude.Int\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 11,
    },
    TypeConstructor(
        QualifiedName {
            [salsa id]: 0,
            module: Some(
                ModuleId {
                    [salsa id]: 0,
                    name: "Prelude",
                },
            ),
            name: Symbol {
                [salsa id]: 0,
                text: "Int",
            },
        },
    ),
)
