src/snapshots/purs_oxide__parser__tests__parse_atomic_type.snap
---
source: src/parser.rs
expression: "parse_type(\"var\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 3,
    },
    Var(
        Symbol {
            text: "var",
        },
    ),
)
