src/snapshots/purs_oxide__parser__tests__parse_complex_type-2.snap
---
source: src/parser.rs
expression: "parse_type(\"Either String Int\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 17,
    },
    TypeApp(
        Located(
            SourceSpan {
                start: 0,
                end: 13,
            },
            TypeApp(
                Located(
                    SourceSpan {
                        start: 0,
                        end: 6,
                    },
                    TypeConstructor(
                        QualifiedName {
                            [salsa id]: 0,
                            module: None,
                            name: Symbol {
                                [salsa id]: 0,
                                text: "Either",
                            },
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 7,
                        end: 13,
                    },
                    TypeConstructor(
                        QualifiedName {
                            [salsa id]: 1,
                            module: None,
                            name: Symbol {
                                [salsa id]: 1,
                                text: "String",
                            },
                        },
                    ),
                ),
            ),
        ),
        Located(
            SourceSpan {
                start: 14,
                end: 17,
            },
            TypeConstructor(
                QualifiedName {
                    [salsa id]: 2,
                    module: None,
                    name: Symbol {
                        [salsa id]: 2,
                        text: "Int",
                    },
                },
            ),
        ),
    ),
)
