src/snapshots/purs_oxide__parser__tests__parse_complex_type-3.snap
---
source: src/parser.rs
expression: "parse_type(\"Array (Maybe Int)\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 17,
    },
    TypeApp(
        Located(
            SourceSpan {
                start: 0,
                end: 5,
            },
            TypeConstructor(
                QualifiedName {
                    symbol: Symbol(
                        Id {
                            value: 1,
                        },
                    ),
                    actually_qualified: false,
                },
            ),
        ),
        Located(
            SourceSpan {
                start: 6,
                end: 17,
            },
            Parens(
                Located(
                    SourceSpan {
                        start: 7,
                        end: 16,
                    },
                    TypeApp(
                        Located(
                            SourceSpan {
                                start: 7,
                                end: 12,
                            },
                            TypeConstructor(
                                QualifiedName {
                                    symbol: Symbol(
                                        Id {
                                            value: 2,
                                        },
                                    ),
                                    actually_qualified: false,
                                },
                            ),
                        ),
                        Located(
                            SourceSpan {
                                start: 13,
                                end: 16,
                            },
                            TypeConstructor(
                                QualifiedName {
                                    symbol: Symbol(
                                        Id {
                                            value: 3,
                                        },
                                    ),
                                    actually_qualified: false,
                                },
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
