src/snapshots/purs_oxide__parser__tests__parse_complex_type.snap
---
source: src/parser.rs
expression: "parse_type(\"Maybe Int\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 9,
    },
    TypeApp(
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 0,
                end: 5,
            },
            TypeConstructor(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "Maybe",
                    },
                },
            ),
        ),
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 6,
                end: 9,
            },
            TypeConstructor(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "Int",
                    },
                },
            ),
        ),
    ),
)
