src/snapshots/purs_oxide__parser__tests__parse_literals-2.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" \"hello\" \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 8,
    },
    Literal(
        String(
            PSString(
                [
                    104,
                    101,
                    108,
                    108,
                    111,
                ],
            ),
        ),
    ),
)
