src/snapshots/purs_oxide__parser__tests__parse_literals-3.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" true \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 5,
    },
    Literal(
        Boolean(
            true,
        ),
    ),
)
