src/snapshots/purs_oxide__parser__tests__parse_literals-4.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" 'a' \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 4,
    },
    Literal(
        Char(
            97,
        ),
    ),
)
